src/css/item.css
.container {
    border: 1px solid #eee;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 1.42857;
    font-size: 14px;
    margin: 20px 0;
    box-shadow: 2px 2px 6px 2px rgba(230, 230, 230, 1);
    background-color: #fff;
}

.item {
    padding: .7em .5em;
}

.description {
    margin: 0;
}

.description p {
    margin: 0 0 .5rem;
}

.heading header {
    font-family: serif;
    margin-top: 0;
    margin-bottom: 0;
    text-transform: none;
    font-size: 1.3rem;
    font-weight: 400;
}

.heading a {
    text-decoration: none;
    box-shadow: none;
}

.heading a:hover {
    text-decoration: underline;
}

.heading.Repository a header {
    color: inherit;
}

.heading.Repository a {
    color: #034153;
}

.heading.HistoricalAgent a {
    color: #517c00;
}

.heading.DocumentaryUnit a {
    color: #6c003b;
}

.heading.VirtualUnit a {
    color: #544F5F;
}

.heading.Country a {
    color: #864300;
}

.details {
    font-size: .85em;
}

.details a.alt {
    color: #111;
    font-weight: bolder;
    box-shadow: none;
}

.details a.alt:hover {
    text-decoration: underline;
}

.details ul {
    padding-left: 0;
    margin-left: 0;
    list-style: none;
    color: #999;
    margin-bottom: 5px;
}

.details li:first-child {
    padding-left: 0;
}

.details li {
    padding-right: 5px;
    display: inline-block;
}

.subitems a {
    font-size: .85em;
    margin-top: 5px;
    color: #333;
    font-weight: lighter;
    box-shadow: none;
    text-shadow: rgba(82, 168, 236, 0.8) 0 0 5px;
}

.subitems a:hover {
    text-decoration: underline;
}

ul.alternate-names {
    padding: 0;
    margin: 0 0 .4rem;
    list-style: none;
    line-height: inherit;
}

.alternate-names li {
    font-weight: bold;
    display: inline;
}

ul.alternate-names li:after {
    content: " | ";
}

ul.alternate-names li:last-child:after {
    content: "";
}

footer {
    margin-top: 5px;
    border-top: 1px solid #ddd;
    padding: 0 .25em;
    background-color: #f5f5f5;
    overflow: auto;
}

footer a {
    float: right;
    color: #666;
    padding: .2em;
    font-size: .85em;
    box-shadow: none;
}

footer a:hover {
    color: #333;
}

.ei-placeholder {
    margin: 10px;
}

.loading-placeholder {
    background-color: #efefef;
    color: #efefef;
    white-space:nowrap;
    -moz-transform: rotate(.8deg) skewx(-12deg);
    -moz-box-shadow:3px 0 2px #444;
    border:4px solid #fff;
    background: -moz-linear-gradient(180deg, #000, #222);
}

